--- a/public/index.html
+++ b/public/index.html
@@ -24,9 +24,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Personal Trainer App</title>
     <link href="http://cdn.syncfusion.com/ej2/material.css" rel="stylesheet" type="text/css" />
-    <script src="lodash.js"></script>
+    <script src="https://cdn.jsdelivr.net/lodash/4.17.4/lodash.min.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
